# EstimAI

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  NEXT_STEPS.md  README.md  RUN_INSTRUCTIONS.md  dev.sh  docker-compose.yml  pytest.ini  roadmap.md  run_backend.sh  run_frontend.sh  start_backend.sh  start_dev.sh
backend/: README.md  env.example  pyproject.toml  requirements.txt  test_db.py  test_detection.py
backend/app/: __init__.py  db.py  deps.py  enums.py  main.py  models.py  schemas.py  schemas_estimai.py
backend/templates/: README.md
backend/tests/: conftest.py  test_agent_takeoff.py  test_api_vector_takeoff.py  test_assemblies.py  test_auth.py  test_auth_routes.py  test_bid_pdf.py  test_cli_contract.py  test_curb_only.py  test_db.py  test_demo_hardening.py  test_depth.py  test_earthwork_surface.py  test_earthwork_tables.py  test_estimate_endpoint.py  test_extract_scale.py  test_extract_vectors.py  test_health.py  test_imports_normalized.py  test_ingest.py  test_ingest_manifest.py  test_job_routes.py  test_jobs_sqlite.py  test_legend_detection.py  test_leveler_endpoint.py  test_llm_gateway.py  test_llm_json.py  test_networks.py  test_orchestrator_contracts.py  test_overrides.py  test_parsers.py  test_pdf_export.py  test_pdfnet_smoke.py  test_qa_depth.py  test_qa_rules.py  test_review_endpoints.py  test_review_roundtrip.py  test_review_writer_depth.py  test_risk_endpoint.py  test_scale_and_curb.py  (+8 more)
backend/vpdf/: __init__.py  classify.py  cli.py  config.py  debug_svg.py  extract.py  geom.py  scale.py  (+1 more)
(+209 files in other folders)
