[tool.poetry]
name = "estimai-backend"
version = "1.0.0"
description = "EstimAI Backend API"
authors = ["EstimAI Team <team@estimai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
pillow = "^10.1.0"
pymupdf = "^1.23.8"
opencv-python-headless = "^4.10"
pandas = "^2.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
